# Plutus

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json
core/: CMakeLists.txt  User.cpp  User.h
core/include/: Account.h  AccountManager.h  Category.h  DatabaseManager.h  DebitAccount.h  IAccount.h  IMoneyOperationManager.h  Logger.h  Member.h  MemberManager.h  MockMoneyOperationManager.h  MoneyOperation.h  Operation.h  User.h
core/src/: AccountManager.cpp  DebitAccount.cpp  IAccount.cpp  IMoneyOperationManager.cpp  Logger.cpp  MemberManager.cpp  MockMoneyOperationManager.cpp  User.cpp
database/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  CategoryManager.cpp  CategoryManager.h  DatabaseManager.cpp  DatabaseManager.h  MemberManager.cpp  MemberManager.h  OperationManager.cpp  OperationManager.h
kernel/: CMakeLists.txt  Plutus.cpp  Plutus.h  main.cpp
modules/: CMakeLists.txt
modules/MoneyOperationBrowser/: AccountMoneyOperationBrowser.cpp  AccountMoneyOperationBrowser.h  CMakeLists.txt  MoneyOperationDialog.cpp  MoneyOperationDialog.h  MoneyOperationTableModel.cpp  MoneyOperationTableModel.h  MoneyOperationTableView.cpp  MoneyOperationTableView.h
test/: CMakeLists.txt
test/core/: CMakeLists.txt  MoneyOperationTest.cpp  UserTest.cpp  UserTest.h
